--- a/config.json
+++ b/config.json
@@ -1,13 +1,23 @@
 {
   "server": {
-    "http_port": ":8083",
-    "ice_servers": ["stun:stun.l.google.com:19302"]
+    "http_port": ":8083"
   },
   "streams": {
-    "H264_AAC": {
-      "on_demand": false,
-      "disable_audio": true,
-      "url": "rtsp://admin:admin@176.117.205.3:5541/video1"
+    "Cam1": {
+      "on_demand" : false,
+      "url": "rtsp://admin:fasterfaster1@172.17.1.60"
+    },
+    "Cam2": {
+      "on_demand" : false,
+      "url": "rtsp://admin:fasterfaster1@172.17.1.60"
+    },
+    "Cam3": {
+      "on_demand" : false,
+      "url": "rtsp://admin:fasterfaster1@172.17.1.60"
+    },
+    "Cam4": {
+      "on_demand" : false,
+      "url": "rtsp://admin:fasterfaster1@172.17.1.60"
     }
   }
 }
